--- a/index.html
+++ b/index.html
@@ -19,22 +19,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">About</a>
+                        <a href=".section-one">Menu</a>
                     </li>
                     <li>
-                        <a href="">Menu</a>
+                        <a href=".section-two">Reviews</a>
                     </li>
                     <li>
-                        <a href="">Locations</a>
-                    </li>
-                    <li>
-                        <a href="">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="">Reviews</a>
-                    </li>
-                    <li>
-                        <a href="">Contact</a>
+                        <a href=".section-three">Contact</a>
                     </li>
                 </ul>
             </nav>
